implementing /tasks endpoints
